@@ -1,3 +1,4 @@
+* Warn when smokeping uses takes over 80% of the time available for a polling cycle -- tobi
 * don't complain when there is no data in a graph yet while calculation stddev -- tobi
 * in a multihost graph take the number of pings for each component into consideration  -- tobi
 * fixed problem with rounding error in calculating stddev -- tobi
